Can save and load Regions, fixed Statistics bug

--- a/.gitignore
+++ b/.gitignore
@@ -5813,3 +5813,4 @@ train/non-face/graves111_96.pgm
 train/non-face/graves111_97.pgm
 train/non-face/graves111_98.pgm
 train/non-face/graves111_99.pgm
+wideNose.txt
